// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex snapshot should match snapshot 1`] = `
<Flex>
  <div
    className="md-flex-wrapper"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--flex-xgap-size": undefined,
        "--flex-ygap-size": undefined,
        "alignContent": "start",
        "alignItems": "start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "start",
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with alignContent 1`] = `
<Flex
  alignContent="center"
>
  <div
    className="md-flex-wrapper"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--flex-xgap-size": undefined,
        "--flex-ygap-size": undefined,
        "alignContent": "center",
        "alignItems": "start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "start",
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with alignItems 1`] = `
<Flex
  alignItems="center"
>
  <div
    className="md-flex-wrapper"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--flex-xgap-size": undefined,
        "--flex-ygap-size": undefined,
        "alignContent": "start",
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "start",
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with className 1`] = `
<Flex
  className="example-class"
>
  <div
    className="example-class md-flex-wrapper"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--flex-xgap-size": undefined,
        "--flex-ygap-size": undefined,
        "alignContent": "start",
        "alignItems": "start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "start",
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with id 1`] = `
<Flex
  id="example-id"
>
  <div
    className="md-flex-wrapper"
    data-xgap={true}
    data-ygap={false}
    id="example-id"
    style={
      Object {
        "--flex-xgap-size": undefined,
        "--flex-ygap-size": undefined,
        "alignContent": "start",
        "alignItems": "start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "start",
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with justifyContent 1`] = `
<Flex
  justifyContent="center"
>
  <div
    className="md-flex-wrapper"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--flex-xgap-size": undefined,
        "--flex-ygap-size": undefined,
        "alignContent": "start",
        "alignItems": "start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "center",
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with style 1`] = `
<Flex
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-flex-wrapper"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--flex-xgap-size": undefined,
        "--flex-ygap-size": undefined,
        "alignContent": "start",
        "alignItems": "start",
        "color": "pink",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "start",
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with wrap 1`] = `
<Flex
  wrap="wrap-reverse"
>
  <div
    className="md-flex-wrapper"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--flex-xgap-size": undefined,
        "--flex-ygap-size": undefined,
        "alignContent": "start",
        "alignItems": "start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap-reverse",
        "justifyContent": "start",
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with xgap 1`] = `
<Flex
  xgap="1rem"
>
  <div
    className="md-flex-wrapper"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--flex-xgap-size": "1rem",
        "--flex-ygap-size": undefined,
        "alignContent": "start",
        "alignItems": "start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "start",
      }
    }
  >
    Test
  </div>
</Flex>
`;

exports[`Flex snapshot should match snapshot with ygap 1`] = `
<Flex
  ygap="1rem"
>
  <div
    className="md-flex-wrapper"
    data-xgap={true}
    data-ygap={false}
    style={
      Object {
        "--flex-xgap-size": undefined,
        "--flex-ygap-size": "1rem",
        "alignContent": "start",
        "alignItems": "start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "start",
      }
    }
  >
    Test
  </div>
</Flex>
`;
